[tool.poetry]
name = "iceportal"
version = "1.1.1"
description = "Python client for getting data from the ICE Portal"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23,<1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
pytest-httpx = ">=0.21,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
