[tool.poetry]
name = "iceportal"
version = "1.2.0"
description = "Python client for getting data from the ICE Portal"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.24,<1"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^8"
pytest-httpx = ">=0.21,<1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
